--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                     </div>
                 </div>
                 <div class="panel-body body-panel">
+                    <h3 class="inactive text-center text-muted" id="no-message">No messages right now.</h3>
                     <ul class="chat" id="chat">
-                        <li class="left clearfix">
+<!--                    <li class="left clearfix">
                             <div class="chat-body clearfix">
                                 <div class="header">
                                     <strong class="primary-font">Jack Sparrow</strong> 
@@ -37,7 +38,7 @@
                                     dolor, quis ullamcorper ligula sodales.
                                 </p>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="panel-footer clearfix">
@@ -53,9 +54,29 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="nameModal" tabindex="-1" role="dialog" aria-labelledby="nameLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Enter your name</h4>
+      </div>
+      <div class="modal-body">
+        <p class="text-muted">This name is using in this chat application.</p>
+        <input type="text" class="form-control" name="chat-name-input" id="chat-name-input" placeholder="John" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary btn-block" id="save-btn">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
 	<script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="/js/modal.js"></script>
 </body>
 </html>
